modificação na conversão para lista no CsvImportService (talvez seja por causa da versão do java)